Better example with pdf generated

--- a/kernel/src/main/java/fr/polytech/kernel/util/addon/latexexamples/basic.tex
+++ b/kernel/src/main/java/fr/polytech/kernel/util/addon/latexexamples/basic.tex
@@ -1,14 +1,13 @@
-\documentclass{article}
+\documentclass[12pt,a4paper]{article}
 \usepackage{musixtex}
 
 \begin{document}
 \begin{music}
-% Insérez ici vos commandes pour la partition
 \instrumentnumber{1}
-\setstaffs{1}{2}
 \startpiece
-\Notes\ibu0f0|qb0{cge}\tbu0\qb0g|\hl j\en
+\Notes \qu{cccd} \enotes \bar
+\Notes \wh{e} \enotes \barre
+\Notes \wh{d} \enotes \bar
 \endpiece
-
 \end{music}
 \end{document}
