--- a/kernel/src/main/java/fr/polytech/kernel/util/addon/latexexamples/basic.tex
+++ b/kernel/src/main/java/fr/polytech/kernel/util/addon/latexexamples/basic.tex
@@ -4,10 +4,11 @@
 \begin{document}
 \begin{music}
 \instrumentnumber{1}
+\setname1{Piano}
 \startpiece
 \Notes \qu{cccd} \enotes \bar
-\Notes \wh{e} \enotes \barre
-\Notes \wh{d} \enotes \bar
+\Notes \wh{e} \enotes \bar
+\Notes \mp\wh{d} \qa{c} \enotes \bar
 \endpiece
 \end{music}
 \end{document}
