Partition gen and Latex gen

--- a/kernel/src/main/java/fr/polytech/kernel/util/addon/latexexamples/basic.tex
+++ b/kernel/src/main/java/fr/polytech/kernel/util/addon/latexexamples/basic.tex
@@ -8,7 +8,7 @@
 \startpiece
 \Notes \qu{cccd} \enotes \bar
 \Notes \wh{e} \enotes \bar
-\Notes \mp\wh{d} \qa{c} \enotes \bar
+\Notes \mp\wh{d} \quarter{\sharp{c}} \enotes \bar
 \endpiece
 \end{music}
 \end{document}
